Refactor: Transitioned to Paper